Bug 101903 - changing pseudoClass (:indeterminate) should cause distribution
Summary: changing pseudoClass (:indeterminate) should cause distribution
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Shinya Kawanaka
URL:
Keywords:
Depends on:
Blocks: 100451
  Show dependency treegraph
 
Reported: 2012-11-11 23:15 PST by Shinya Kawanaka
Modified: 2012-11-16 05:40 PST (History)
5 users (show)

See Also:


Attachments
Patch (13.22 KB, patch)
2012-11-12 20:50 PST, Shinya Kawanaka
no flags Details | Formatted Diff | Diff
Patch (6.90 KB, patch)
2012-11-13 22:25 PST, Shinya Kawanaka
no flags Details | Formatted Diff | Diff
WIP (16.03 KB, patch)
2012-11-13 22:46 PST, Shinya Kawanaka
no flags Details | Formatted Diff | Diff
WIP (8.79 KB, patch)
2012-11-15 19:42 PST, Shinya Kawanaka
no flags Details | Formatted Diff | Diff
Patch (8.94 KB, patch)
2012-11-15 20:28 PST, Shinya Kawanaka
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Shinya Kawanaka 2012-11-11 23:15:03 PST
When these pseudo classes are changed, we should invalidate distribution.
Comment 1 Shinya Kawanaka 2012-11-12 20:50:35 PST
Created attachment 173805 [details]
Patch
Comment 2 WebKit Review Bot 2012-11-13 07:55:48 PST
Comment on attachment 173805 [details]
Patch

Clearing flags on attachment: 173805

Committed r134418: <http://trac.webkit.org/changeset/134418>
Comment 3 WebKit Review Bot 2012-11-13 07:55:51 PST
All reviewed patches have been landed.  Closing bug.
Comment 5 Dimitri Glazkov (Google) 2012-11-13 09:47:27 PST
Reverted r134418 for reason:

The newly added test is crashing on cr-win.

Committed r134432: <http://trac.webkit.org/changeset/134432>
Comment 6 Shinya Kawanaka 2012-11-13 22:25:57 PST
Created attachment 174077 [details]
Patch
Comment 7 Shinya Kawanaka 2012-11-13 22:26:34 PST
Comment on attachment 174077 [details]
Patch

Oops, I've uploaded in the wrong position.
Comment 8 Shinya Kawanaka 2012-11-13 22:46:58 PST
Created attachment 174080 [details]
WIP
Comment 9 Shinya Kawanaka 2012-11-14 04:34:40 PST
Log for crash.

crash log for DumpRenderTree (pid 6684):
STDOUT: layer at (0,0) size 800x600
STDOUT:   RenderView at (0,0) size 800x600
STDOUT: layer at (0,0) size 800x80
STDOUT:   RenderBlock {HTML} at (0,0) size 800x80
STDOUT:     RenderBody {BODY} at (8,16) size 784x56
STDOUT:       RenderBlock {P} at (0,0) size 784x20
STDOUT:         RenderText {#text} at (0,0) size 534x19
STDOUT:           text run at (0,0) width 534: "When progress became 'indeterminate' or not-'indeterminate', distribution should happen."
STDOUT:       RenderBlock {DIV} at (0,36) size 784x20
STDOUT:         RenderProgress {PROGRESS} at (0,2) size 160x17
STDOUT:         RenderInline {SPAN} at (0,0) size 57x19
STDOUT:           RenderText {#text} at (160,0) size 57x19
STDOUT:             text run at (160,0) width 57: "separator"
STDERR: SHOULD NEVER BE REACHED
STDERR: Backtrace:
STDERR: 	WebThemeControlDRTWin::markState [0x004729B4+452] (d:\src\w\crwk\src\third_party\webkit\tools\dumprendertree\chromium\webthemecontroldrtwin.cpp:275)
STDERR: 	WebThemeControlDRTWin::drawProgressBar [0x004723E1+273] (d:\src\w\crwk\src\third_party\webkit\tools\dumprendertree\chromium\webthemecontroldrtwin.cpp:527)
STDERR: 	drawProgressBar [0x0047370D+189] (d:\src\w\crwk\src\third_party\webkit\tools\dumprendertree\chromium\webthemeenginedrtwin.cpp:87)
STDERR: 	WebThemeEngineDRTWin::paintProgressBar [0x00474448+88] (d:\src\w\crwk\src\third_party\webkit\tools\dumprendertree\chromium\webthemeenginedrtwin.cpp:785)
STDERR: 	WebCore::PlatformSupport::paintProgressBar [0x00BE0E69+137] (d:\src\w\crwk\src\third_party\webkit\source\webkit\chromium\src\platformsupport.cpp:300)
STDERR: 	WebCore::RenderThemeChromiumWin::paintProgressBar [0x022D3567+471] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderthemechromiumwin.cpp:806)
STDERR: 	WebCore::RenderTheme::paint [0x0175F580+464] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\rendertheme.cpp:320)
STDERR: 	WebCore::RenderBox::paintBoxDecorations [0x013C1453+435] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderbox.cpp:875)
STDERR: 	WebCore::RenderBlock::paintObject [0x026FADD3+115] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderblock.cpp:3030)
STDERR: 	WebCore::RenderBlock::paint [0x026F8029+233] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderblock.cpp:2770)
STDERR: 	WebCore::InlineBox::paint [0x02E63D40+304] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\inlinebox.cpp:233)
STDERR: 	WebCore::InlineFlowBox::paint [0x01B1253D+893] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\inlineflowbox.cpp:1089)
STDERR: 	WebCore::RootInlineBox::paint [0x02002255+69] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\rootinlinebox.cpp:212)
STDERR: 	WebCore::RenderLineBoxList::paint [0x01912BC1+1313] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderlineboxlist.cpp:264)
STDERR: 	WebCore::RenderBlock::paintContents [0x026FA5CD+125] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderblock.cpp:2937)
STDERR: 	WebCore::RenderBlock::paintObject [0x026FAEC5+357] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderblock.cpp:3059)
STDERR: 	WebCore::RenderBlock::paint [0x026F8029+233] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderblock.cpp:2770)
STDERR: 	WebCore::RenderBlock::paintChild [0x026F85CA+570] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderblock.cpp:2987)
STDERR: 	WebCore::RenderBlock::paintChildren [0x026F88D2+82] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderblock.cpp:2956)
STDERR: 	WebCore::RenderBlock::paintContents [0x026FA683+307] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderblock.cpp:2949)
STDERR: 	WebCore::RenderBlock::paintObject [0x026FAEC5+357] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderblock.cpp:3059)
STDERR: 	WebCore::RenderBlock::paint [0x026F8029+233] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderblock.cpp:2770)
STDERR: 	WebCore::RenderBlock::paintChild [0x026F85CA+570] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderblock.cpp:2987)
STDERR: 	WebCore::RenderBlock::paintChildren [0x026F88D2+82] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderblock.cpp:2956)
STDERR: 	WebCore::RenderBlock::paintContents [0x026FA683+307] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderblock.cpp:2949)
STDERR: 	WebCore::RenderBlock::paintObject [0x026FAEC5+357] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderblock.cpp:3059)
STDERR: 	WebCore::RenderBlock::paint [0x026F8029+233] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderblock.cpp:2770)
STDERR: 	WebCore::RenderLayer::paintLayerContents [0x016A21BF+3103] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderlayer.cpp:3358)
STDERR: 	WebCore::RenderLayer::paintLayerContentsAndReflection [0x016A2CB6+214] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderlayer.cpp:3163)
STDERR: 	WebCore::RenderLayer::paintLayer [0x016A12F7+1287] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderlayer.cpp:3145)
STDERR: 	WebCore::RenderLayer::paintList [0x016A2DC7+199] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderlayer.cpp:3447)
STDERR: 	WebCore::RenderLayer::paintLayerContents [0x016A2346+3494] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderlayer.cpp:3384)
STDERR: 	WebCore::RenderLayer::paintLayerContentsAndReflection [0x016A2CB6+214] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderlayer.cpp:3163)
STDERR: 	WebCore::RenderLayer::paintLayer [0x016A12F7+1287] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderlayer.cpp:3145)
STDERR: 	WebCore::RenderLayer::paint [0x0169FF12+178] (d:\src\w\crwk\src\third_party\webkit\source\webcore\rendering\renderlayer.cpp:2950)
STDERR: 	WebCore::FrameView::paintContents [0x02A74488+1048] (d:\src\w\crwk\src\third_party\webkit\source\webcore\page\frameview.cpp:3247)
STDERR: 	WebCore::ScrollView::paint [0x02683711+897] (d:\src\w\crwk\src\third_party\webkit\source\webcore\platform\scrollview.cpp:1079)
STDERR: 	WebKit::PageWidgetDelegate::paint [0x00BDB59C+396] (d:\src\w\crwk\src\third_party\webkit\source\webkit\chromium\src\pagewidgetdelegate.cpp:99)
STDERR: 	WebKit::WebViewImpl::paint [0x00CDBC75+485] (d:\src\w\crwk\src\third_party\webkit\source\webkit\chromium\src\webviewimpl.cpp:1832)
STDERR: 	WebViewHost::paintRect [0x00487A6F+335] (d:\src\w\crwk\src\third_party\webkit\tools\dumprendertree\chromium\webviewhost.cpp:1784)
STDERR: 	WebViewHost::paintInvalidatedRegion [0x0048746A+506] (d:\src\w\crwk\src\third_party\webkit\tools\dumprendertree\chromium\webviewhost.cpp:1817)
STDERR: 	TestShell::dump [0x00462CF3+1971] (d:\src\w\crwk\src\third_party\webkit\tools\dumprendertree\chromium\testshell.cpp:655)
STDERR: 	TestShell::testFinished [0x00468296+54] (d:\src\w\crwk\src\third_party\webkit\tools\dumprendertree\chromium\testshell.cpp:386)
STDERR: 	DRTTestRunner::WorkQueue::processWorkSoon [0x0042B6D2+210] (d:\src\w\crwk\src\third_party\webkit\tools\dumprendertree\chromium\drttestrunner.cpp:321)
STDERR: 	DRTTestRunner::locationChangeDone [0x004284D4+84] (d:\src\w\crwk\src\third_party\webkit\tools\dumprendertree\chromium\drttestrunner.cpp:724)
STDERR: 	WebViewHost::locationChangeDone [0x004869F4+52] (d:\src\w\crwk\src\third_party\webkit\tools\dumprendertree\chromium\webviewhost.cpp:1625)
STDERR: 	WebViewHost::didFinishLoad [0x00482C92+146] (d:\src\w\crwk\src\third_party\webkit\tools\dumprendertree\chromium\webviewhost.cpp:1120)
STDERR: 	WebKit::FrameLoaderClientImpl::dispatchDidFinishLoad [0x00BA6490+176] (d:\src\w\crwk\src\third_party\webkit\source\webkit\chromium\src\frameloaderclientimpl.cpp:865)
STDERR: 	WebCore::FrameLoader::checkLoadCompleteForThisFrame [0x0265D6DC+1436] (d:\src\w\crwk\src\third_party\webkit\source\webcore\loader\frameloader.cpp:2166)
STDERR: 	WebCore::FrameLoader::checkLoadComplete [0x0265D04D+333] (d:\src\w\crwk\src\third_party\webkit\source\webcore\loader\frameloader.cpp:2336)
STDERR: 	WebCore::DocumentLoader::finishedLoading [0x017E1A92+226] (d:\src\w\crwk\src\third_party\webkit\source\webcore\loader\documentloader.cpp:304)
STDERR: 	WebCore::MainResourceLoader::didFinishLoading [0x02A5E18A+378] (d:\src\w\crwk\src\third_party\webkit\source\webcore\loader\mainresourceloader.cpp:529)
STDERR: 	WebCore::ResourceLoader::didFinishLoading [0x0173366B+43] (d:\src\w\crwk\src\third_party\webkit\source\webcore\loader\resourceloader.cpp:453)
STDERR: 	WebCore::ResourceHandleInternal::didFinishLoading [0x02FBA790+144] (d:\src\w\crwk\src\third_party\webkit\source\webcore\platform\network\chromium\resourcehandle.cpp:156)
STDERR: 	webkit_glue::WebURLLoaderImpl::Context::OnCompletedRequest [0x098978F7+855] (d:\src\w\crwk\src\webkit\glue\weburlloader_impl.cc:673)
STDERR: 	`anonymous namespace'::RequestProxy::NotifyCompletedRequest [0x0057277B+59] (d:\src\w\crwk\src\webkit\tools\test_shell\simple_resource_loader_bridge.cc:405)
STDERR: 	base::internal::RunnableAdapter<void (__thiscall `anonymous namespace'::RequestProxy::*)(int,std::basic_string<char,std::char_traits<char>,std::allocator<char> > const &,base::TimeTicks const &)>::Run [0x00574B3C+76] (d:\src\w\crwk\src\base\bind_internal.h:311)
STDERR: 	base::internal::InvokeHelper<0,void,base::internal::RunnableAdapter<void (__thiscall `anonymous namespace'::RequestProxy::*)(int,std::basic_string<char,std::char_traits<char>,std::allocator<char> > const &,base::TimeTicks const &)>,void __cdecl(`anonymous [0x00572211+65] (d:\src\w\crwk\src\base\bind_internal.h:960)
STDERR: 	base::internal::Invoker<4,base::internal::BindState<base::internal::RunnableAdapter<void (__thiscall `anonymous namespace'::RequestProxy::*)(int,std::basic_string<char,std::char_traits<char>,std::allocator<char> > const &,base::TimeTicks const &)>,void __ [0x0057490C+172] (d:\src\w\crwk\src\base\bind_internal.h:1571)
STDERR: 	base::Callback<void __cdecl(void)>::Run [0x10069F2F+47] (d:\src\w\crwk\src\base\callback.h:391)
STDERR: 	MessageLoop::RunTask [0x100FE2BC+764] (d:\src\w\crwk\src\base\message_loop.cc:472)
STDERR: 	MessageLoop::DeferOrRunPendingTask [0x100FAE84+52] (d:\src\w\crwk\src\base\message_loop.cc:485)
Comment 10 Shinya Kawanaka 2012-11-14 04:35:18 PST
WebThemeControlDRTWin::markState() cannot have 'indeterminate' state...
Comment 11 Shinya Kawanaka 2012-11-15 19:42:07 PST
Created attachment 174594 [details]
WIP
Comment 12 Shinya Kawanaka 2012-11-15 19:45:53 PST
I would like to investigate why the ASSERT is triggered on Windows...
I think WebThemeControlDRTWin does not handle with Indeterminate state correctly, but I have to confirm it.
Comment 13 Shinya Kawanaka 2012-11-15 20:21:12 PST
(In reply to comment #12)
> I would like to investigate why the ASSERT is triggered on Windows...
> I think WebThemeControlDRTWin does not handle with Indeterminate state correctly, but I have to confirm it.

I made a testcase that has an indeterminate progress element only.
Then DRT has crashed on Windows. (I appreciate yosin to confirm it!)
I would like to file a bug for that issue.
For this issue, I would like to use -webkit-appearance: none.
Comment 14 Shinya Kawanaka 2012-11-15 20:28:22 PST
Created attachment 174600 [details]
Patch
Comment 15 WebKit Review Bot 2012-11-15 21:26:57 PST
Comment on attachment 174600 [details]
Patch

Rejecting attachment 174600 [details] from commit-queue.

New failing tests:
platform/chromium/virtual/threaded/compositing/webgl/webgl-background-color.html
Full output: http://queues.webkit.org/results/14846708
Comment 16 WebKit Review Bot 2012-11-15 22:51:42 PST
Comment on attachment 174600 [details]
Patch

Attachment 174600 [details] did not pass chromium-ews (chromium-xvfb):
Output: http://queues.webkit.org/results/14845777

New failing tests:
platform/chromium/virtual/threaded/compositing/webgl/webgl-background-color.html
Comment 17 Shinya Kawanaka 2012-11-15 23:57:15 PST
Gardener says it's just flaky. Let me cq+ again.
Comment 18 WebKit Review Bot 2012-11-16 05:40:13 PST
Comment on attachment 174600 [details]
Patch

Clearing flags on attachment: 174600

Committed r134938: <http://trac.webkit.org/changeset/134938>
Comment 19 WebKit Review Bot 2012-11-16 05:40:17 PST
All reviewed patches have been landed.  Closing bug.