Source/WebCore/dom/ElementShadow.h
@@ -27,6 +27,7 @@
 #ifndef ElementShadow_h
 #define ElementShadow_h
 
+#include "CSSSelector.h"
 #include "ContentDistributor.h"
 #include "ExceptionCode.h"
 #include "SelectRuleFeatureSet.h"
@@ -88,6 +89,8 @@ private:
     SelectRuleFeatureSet m_selectFeatures;
     bool m_shouldCollectSelectFeatureSet : 1;
 };
+
+void invalidateParentDistributionIfNecessary(Element*, CSSSelector::PseudoType updatedPseudoType);
 
 inline ShadowRoot* ElementShadow::youngestShadowRoot() const
 {
