Source/WebCore/html/HTMLProgressElement.cpp
@@ -31,6 +31,7 @@
 #include "HTMLParserIdioms.h"
 #include "ProgressShadowElement.h"
 #include "RenderProgress.h"
+#include "SelectRuleFeatureSet.h"
 #include "ShadowRoot.h"
 #include <wtf/StdLibExtras.h>
 
@@ -158,8 +159,10 @@ void HTMLProgressElement::didElementStateChange()
     if (RenderProgress* render = renderProgress()) {
         bool wasDeterminate = render->isDeterminate();
         render->updateFromElement();
-        if (wasDeterminate != isDeterminate())
+        if (wasDeterminate != isDeterminate()) {
             setNeedsStyleRecalc();
+            invalidateParentDistributionIfNecessary(this, CSSSelector::PseudoIndeterminate);
+        }
     }
 }
 
